--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,10 @@
 		<dependencies>
 			<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-bom -->
 			<dependency>
-			    <groupId>com.amazonaws</groupId>
-			    <artifactId>aws-java-sdk-bom</artifactId>
-			    <version>1.11.774</version>
-			    <type>pom</type>
+				<groupId>com.amazonaws</groupId>
+				<artifactId>aws-java-sdk-bom</artifactId>
+				<version>1.11.774</version>
+				<type>pom</type>
 			</dependency>
 
 			<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/bom -->
@@ -60,11 +60,17 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
 		<dependency>
-		    <groupId>software.amazon.awssdk</groupId>
-		    <artifactId>s3</artifactId>
-		    <version>2.13.8</version>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.13.8</version>
 		</dependency>
 
 		<dependency>
@@ -79,18 +85,30 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>pl.pojo</groupId>
+			<artifactId>pojo-tester</artifactId>
+			<version>0.7.6</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.adobe.testing/s3mock-junit4 -->
 		<dependency>
-		    <groupId>com.adobe.testing</groupId>
-		    <artifactId>s3mock-junit4</artifactId>
-		    <version>2.1.19</version>
-		    <scope>test</scope>
+			<groupId>com.adobe.testing</groupId>
+			<artifactId>s3mock-junit4</artifactId>
+			<version>2.1.19</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
