--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-bom -->
 			<dependency>
 				<groupId>com.amazonaws</groupId>
 				<artifactId>aws-java-sdk-bom</artifactId>
@@ -48,7 +47,6 @@
 				<type>pom</type>
 			</dependency>
 
-			<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/bom -->
 			<dependency>
 				<groupId>software.amazon.awssdk</groupId>
 				<artifactId>bom</artifactId>
@@ -66,7 +64,6 @@
 			<version>3.8.1</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>s3</artifactId>
@@ -91,10 +88,22 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>org.hamcrest</groupId>
+		    <artifactId>hamcrest-all</artifactId>
+		    <version>1.3</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.10.19</version>
+		    <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>pl.pojo</groupId>
@@ -103,7 +112,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.adobe.testing/s3mock-junit4 -->
 		<dependency>
 			<groupId>com.adobe.testing</groupId>
 			<artifactId>s3mock-junit4</artifactId>
